--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
 			<artifactId>json</artifactId>
 			<version>20250107</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version> <!-- Use latest -->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
